--- a/Reto3_Lab2_HTMLyCSS/css/style.css
+++ b/Reto3_Lab2_HTMLyCSS/css/style.css
@@ -72,6 +72,10 @@ input[type=submit]{
     width: 100px;
     height: 150px;
 }
+.listItem:hover{
+    background-color: #99c5dd;
+    transform: scale(1.1) rotate(5deg);
+}
 section ul li a{
     color: #87b1ef;
     text-decoration: none;
