Arreglando error de tipeo

--- a/Proyecto_HTMLyCSS/css/style.css
+++ b/Proyecto_HTMLyCSS/css/style.css
@@ -212,7 +212,7 @@ h1, .email{
         font-size: 90%;
     }
     .pfp{
-        width: auto%;
+        width: auto;
     }
     .DatosPerfil{
         width: auto;
